--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
       <a class="tab" href="./help.html">説明</a>
       <a class="tab" href="./memo.html">メモ</a>
       <a class="tab" href="./qr.html">QR</a>
+      <a class="tab" href="./timer.html">タイマー</a>
+      <a class="tab" href="./convert.html">換算</a>
+      <a class="tab" href="./password.html">PW</a>
+      <a class="tab" href="./voice.html">音声</a>
+      <a class="tab" href="./ocr.html">OCR</a>
     </nav>
 
     <section class="display" aria-live="polite">
