chore(pwa): bump SW cache to v1.3.0; fix(calc): top clipping; feat(timer): progress, presets, beep, shortcuts

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
       background: radial-gradient(1200px 600px at 10% 0%, #13173a 0%, var(--bg) 50%, #0b0e1a 100%);
       color: var(--text);
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans JP", sans-serif;
-      display: grid;
-      place-items: center;
-      padding: 24px;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      min-height: 100dvh;
+      padding: 16px env(safe-area-inset-right) calc(16px + env(safe-area-inset-bottom)) env(safe-area-inset-left);
+      overflow: auto;
     }
     .app {
       width: min(420px, 92vw);
