feat(timer): add Pomodoro/Kitchen modes; fix(calc): prevent '=' clipping on mobile; docs: update help; chore(sw): bump cache to v1.4.0

--- a/help.html
+++ b/help.html
@@ -96,6 +96,14 @@
       <ul>
         <li>直近10件の履歴を保持。DEG/RAD、メモリ、関数表示状態は自動保存されます。</li>
       </ul>
+      <h2>タイマー</h2>
+      <ul>
+        <li>モードタブで「ポモドーロ / キッチン」を切替可能（選択は自動保存）。</li>
+        <li><strong>ポモドーロ:</strong> プリセット（ポモドーロ/短め/じっくり）、作業/短休/長休/ラウンドを分単位で設定。終了時は自動で次のフェーズへ移行します。進捗バー・バイブ・ビープ・通知に対応。<kbd>N</kbd>で次フェーズへスキップ可能。</li>
+        <li><strong>キッチン:</strong> 分・秒を指定してカウントダウン。30秒/1分/3分/5分/10分のプリセットあり。終了時にバイブ・ビープ・通知。<kbd>N</kbd>は無効です。</li>
+        <li><strong>キーボード:</strong> <kbd>Space</kbd>=開始/停止、<kbd>R</kbd>=リセット、<kbd>N</kbd>=次へ（ポモドーロのみ）。</li>
+        <li><strong>保存キー:</strong> <code>timer_work</code>, <code>timer_short</code>, <code>timer_long</code>, <code>timer_rounds</code>, <code>timer_k_min</code>, <code>timer_k_sec</code>, <code>timer_mode</code></li>
+      </ul>
       <h2>PWA（ホーム画面に追加・オフライン）</h2>
       <ul>
         <li>HTTPS配信（Netlify）でPWA対応。ホーム画面に追加してオフラインでも利用可能。</li>
