--- a/timer.html
+++ b/timer.html
@@ -41,14 +41,22 @@
     .sessions{ margin-top:8px; display:flex; gap:6px; flex-wrap:wrap; justify-content:center; }
     .pill{ font-size:12px; padding:4px 8px; border-radius:999px; background: rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.12); color:var(--muted); }
 
-    @media (max-width: 720px){ .app{ width:100vw; min-height:100dvh; border-radius:0; } .display{ font-size:48px; } }
+    /* mode tabs */
+    .mode-tabs{ display:flex; gap:8px; justify-content:center; padding:4px 0 8px; }
+    .mode-tab{ padding:6px 10px; border-radius:999px; border:1px solid rgba(255,255,255,.12); background:rgba(255,255,255,.04); color:var(--text); cursor:pointer; font-size:12px; }
+    .mode-tab[aria-selected="true"]{ background:rgba(255,255,255,.10); border-color:rgba(255,255,255,.2); color:#fff; }
+
+    [data-mode="pomodoro"] #kitchenBox{ display:none; }
+    [data-mode="kitchen"] #pomodoroBox, [data-mode="kitchen"] #pomodoroBox2, [data-mode="kitchen"] #cycle, [data-mode="kitchen"] #sessions{ display:none; }
+
+    @media (max-width: 720px){ .app{ width:100vw; min-height:100svh; border-radius:0; } .display{ font-size:48px; } }
   </style>
 </head>
 <body>
-  <main class="app" aria-label="タイマー">
+  <main class="app" aria-label="タイマー" data-mode="pomodoro">
     <div class="header">
       <div class="title">簡易電卓 - タイマー</div>
-      <div style="color:var(--muted); font-size:12px;">ポモドーロ</div>
+      <div id="modeLabel" style="color:var(--muted); font-size:12px;">ポモドーロ</div>
     </div>
     <nav class="tabs" aria-label="ナビゲーション">
       <a class="tab" href="./">電卓</a>
@@ -63,12 +71,18 @@
     </nav>
 
     <section class="content">
+      <div class="mode-tabs" role="tablist" aria-label="タイマーモード">
+        <button class="mode-tab" data-mode="pomodoro" role="tab" aria-selected="true">ポモドーロ</button>
+        <button class="mode-tab" data-mode="kitchen" role="tab" aria-selected="false">キッチン</button>
+      </div>
       <div id="display" class="display">25:00</div>
       <div class="progress" aria-label="進捗"><div id="bar" class="bar"></div></div>
-      <div class="presets">
-        <button data-preset="pomodoro" title="作業25/短休5/長休15 x4">ポモドーロ</button>
-        <button data-preset="short" title="作業10/短休2/長休5 x3">短め</button>
-        <button data-preset="long" title="作業45/短休10/長休20 x2">じっくり</button>
+      <div id="pomodoroBox">
+        <div class="presets">
+          <button data-preset="pomodoro" title="作業25/短休5/長休15 x4">ポモドーロ</button>
+          <button data-preset="short" title="作業10/短休2/長休5 x3">短め</button>
+          <button data-preset="long" title="作業45/短休10/長休20 x2">じっくり</button>
+        </div>
       </div>
       <div class="controls">
         <button id="startBtn">開始</button>
@@ -76,7 +90,7 @@
         <button id="resetBtn">リセット</button>
         <button id="nextBtn">次へ</button>
       </div>
-      <div class="settings">
+      <div id="pomodoroBox2" class="settings">
         <label>作業(分) <input id="workMin" type="number" min="1" step="1"></label>
         <label>短休(分) <input id="shortMin" type="number" min="1" step="1"></label>
         <label>長休(分) <input id="longMin" type="number" min="1" step="1"></label>
@@ -84,6 +98,20 @@
       </div>
       <div id="cycle" class="cycle">状態: 作業 1/4</div>
       <div id="sessions" class="sessions"></div>
+
+      <div id="kitchenBox">
+        <div class="presets" id="kPresets">
+          <button data-k="30">30秒</button>
+          <button data-k="60">1分</button>
+          <button data-k="180">3分</button>
+          <button data-k="300">5分</button>
+          <button data-k="600">10分</button>
+        </div>
+        <div class="settings">
+          <label>分 <input id="kMin" type="number" min="0" step="1"></label>
+          <label>秒 <input id="kSec" type="number" min="0" max="59" step="1"></label>
+        </div>
+      </div>
     </section>
   </main>
 
@@ -94,6 +122,10 @@
         short: +(localStorage.getItem('timer_short')||5),
         long: +(localStorage.getItem('timer_long')||15),
         rounds: +(localStorage.getItem('timer_rounds')||4),
+      };
+      const K = {
+        min: +(localStorage.getItem('timer_k_min')||3),
+        sec: +(localStorage.getItem('timer_k_sec')||0),
       };
       const el = {
         disp: document.getElementById('display'),
@@ -108,10 +140,18 @@
         cycle: document.getElementById('cycle'),
         sessions: document.getElementById('sessions'),
         bar: document.getElementById('bar'),
+        modeTabs: document.querySelectorAll('.mode-tab'),
+        app: document.querySelector('main.app'),
+        modeLabel: document.getElementById('modeLabel'),
+        kMin: document.getElementById('kMin'),
+        kSec: document.getElementById('kSec'),
+        kPresets: document.getElementById('kPresets'),
       };
       el.work.value = S.work; el.short.value = S.short; el.long.value = S.long; el.rounds.value = S.rounds;
+      el.kMin.value = K.min; el.kSec.value = K.sec;
 
       let timer=null, endAt=0, phase='work', count=0, totalMs=0; // count=作業数
+      let mode = localStorage.getItem('timer_mode') || 'pomodoro';
 
       function saveSettings(){
         // 入力値を設定へ反映しつつ永続化
@@ -125,6 +165,15 @@
         localStorage.setItem('timer_rounds', S.rounds);
       }
       el.work.onchange = saveSettings; el.short.onchange = saveSettings; el.long.onchange = saveSettings; el.rounds.onchange = saveSettings;
+
+      function saveKitchen(){
+        K.min = Math.max(0, +el.kMin.value|0);
+        K.sec = Math.max(0, Math.min(59, +el.kSec.value|0));
+        el.kMin.value = K.min; el.kSec.value = K.sec;
+        localStorage.setItem('timer_k_min', K.min);
+        localStorage.setItem('timer_k_sec', K.sec);
+      }
+      el.kMin.onchange = saveKitchen; el.kSec.onchange = saveKitchen;
 
       function mmss(ms){ const t = Math.max(0, Math.floor(ms/1000)); const m=('0'+Math.floor(t/60)).slice(-2); const s=('0'+(t%60)).slice(-2); return m+':'+s; }
       function vibrate(){ try{ navigator.vibrate?.(200); }catch(_){} }
@@ -169,28 +218,49 @@
         if (remain<=0){
           clearInterval(timer); timer=null; updateProgress(0);
           vibrate(); beep();
-          if (phase==='work'){
-            count++; renderSessions(); const goal = +el.rounds.value;
-            if (count%goal===0){ setPhase('long'); notify('長い休憩'); }
-            else { setPhase('short'); notify('短い休憩'); }
+          if (mode==='pomodoro'){
+            if (phase==='work'){
+              count++; renderSessions(); const goal = +el.rounds.value;
+              if (count%goal===0){ setPhase('long'); notify('長い休憩'); }
+              else { setPhase('short'); notify('短い休憩'); }
+            } else {
+              setPhase('work'); notify('作業再開');
+            }
+            start();
           } else {
-            setPhase('work'); notify('作業再開');
+            notify('時間です');
           }
-          start();
         }
       }
 
       function start(){ if (timer) return; timer = setInterval(tick, 200); }
       function pause(){ if (!timer) return; clearInterval(timer); timer=null; }
-      function reset(){ pause(); count=0; renderSessions(); setPhase('work'); el.disp.textContent = mmss(S.work*60*1000); updateProgress(0); }
-      function next(){ pause(); if (phase==='work'){ count++; renderSessions(); const goal = +el.rounds.value; if (count%goal===0){ setPhase('long'); } else { setPhase('short'); } } else { setPhase('work'); } start(); }
+      function reset(){
+        pause();
+        if (mode==='pomodoro'){
+          count=0; renderSessions(); setPhase('work'); el.disp.textContent = mmss(S.work*60*1000); updateProgress(0);
+          el.next.style.display=''; el.cycle.style.display=''; el.sessions.style.display='';
+        } else {
+          totalMs = (K.min*60 + K.sec)*1000; endAt=0; el.disp.textContent = mmss(totalMs); updateProgress(0);
+          el.next.style.display='none'; el.cycle.style.display='none'; el.sessions.style.display='none';
+        }
+      }
+      function next(){ if (mode!=='pomodoro') return; pause(); if (phase==='work'){ count++; renderSessions(); const goal = +el.rounds.value; if (count%goal===0){ setPhase('long'); } else { setPhase('short'); } } else { setPhase('work'); } start(); }
 
-      el.start.onclick = ()=>{ if (!timer){ if (!endAt) setPhase(phase); start(); } };
+      el.start.onclick = ()=>{
+        if (!timer){
+          if (!endAt){
+            if (mode==='pomodoro') setPhase(phase);
+            else { totalMs = (K.min*60 + K.sec)*1000; endAt = Date.now() + totalMs; updateProgress(totalMs); }
+          }
+          start();
+        }
+      };
       el.pause.onclick = ()=> pause();
       el.reset.onclick = ()=> reset();
       el.next.onclick = ()=> next();
 
-      // プリセット
+      // プリセット (Pomodoro)
       document.querySelector('.presets')?.addEventListener('click', (e)=>{
         const btn = e.target.closest('button[data-preset]'); if (!btn) return;
         const p = btn.dataset.preset;
@@ -201,17 +271,33 @@
         reset();
       });
 
-      // キーボード: Space=開始/停止, R=リセット, N=次へ
-      window.addEventListener('keydown', (e)=>{
-        if (e.code==='Space') { e.preventDefault(); if (timer) pause(); else { if (!endAt) setPhase(phase); start(); } }
-        else if (e.key==='r' || e.key==='R') { reset(); }
-        else if (e.key==='n' || e.key==='N') { next(); }
+      // プリセット (Kitchen)
+      el.kPresets?.addEventListener('click', (e)=>{
+        const b = e.target.closest('button[data-k]'); if (!b) return;
+        const s = +b.dataset.k; K.min = Math.floor(s/60); K.sec = s%60; el.kMin.value = K.min; el.kSec.value = K.sec; saveKitchen(); reset();
       });
+
+      // キーボード: Space=開始/停止, R=リセット, N=次へ(ポモドーロのみ)
+      window.addEventListener('keydown', (e)=>{
+        if (e.code==='Space') { e.preventDefault(); if (timer) pause(); else { if (!endAt) { if (mode==='pomodoro') setPhase(phase); else { totalMs = (K.min*60 + K.sec)*1000; endAt = Date.now() + totalMs; updateProgress(totalMs); } } start(); } }
+        else if (e.key==='r' || e.key==='R') { reset(); }
+        else if (e.key==='n' || e.key==='N') { if (mode==='pomodoro') next(); }
+      });
+
+      // Mode tabs
+      function applyMode(){
+        el.app.setAttribute('data-mode', mode);
+        el.modeLabel.textContent = (mode==='pomodoro') ? 'ポモドーロ' : 'キッチン';
+        el.modeTabs.forEach(btn=> btn.setAttribute('aria-selected', String(btn.dataset.mode===mode)) );
+        localStorage.setItem('timer_mode', mode);
+        reset();
+      }
+      el.modeTabs.forEach(btn=> btn.addEventListener('click', ()=>{ const m = btn.dataset.mode; if (m && m!==mode){ mode=m; applyMode(); } }));
 
       // SW
       if ('serviceWorker' in navigator) { window.addEventListener('load', () => { navigator.serviceWorker.register('./sw.js').catch(()=>{}); }); }
 
-      reset();
+      applyMode();
     })();
   </script>
 </body>
