feat(timer): add Pomodoro/Kitchen modes; fix(calc): prevent '=' clipping on mobile; docs: update help; chore(sw): bump cache to v1.4.0

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
       .header { padding: 12px 14px; }
       .display { padding: 16px 14px 8px 14px; }
       .result { font-size: clamp(24px, 6.0vh, 54px); }
-      .keys { gap: 8px; padding: 12px; padding-bottom: calc(env(safe-area-inset-bottom) + 44px); }
-      button.key { padding: clamp(8px, 2.2vh, 12px) 0; font-size: clamp(15px, 2.2vh, 18px); }
+      .keys { gap: 8px; padding: 12px; padding-bottom: calc(env(safe-area-inset-bottom) + 96px); overflow-y: auto; scroll-padding-bottom: 96px; }
+      button.key { padding: clamp(6px, 1.9vh, 10px) 0; font-size: clamp(14px, 2.1vh, 17px); }
     }
 
     /* Very short viewport height adjustments */
